# StellarLock

./: .dockerignore  .env.example  .env.mainnet  .env.staging  .env.testnet  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Dockerfile.contracts  Dockerfile.dev  README.md  SECURITY.md  commitlint.config.js  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  mutation-testing.yml  security.yml
.storybook/: main.ts  preview.tsx
api/: health.ts  indexer-locks.ts  indexer-stats.ts  readiness.ts
api/_lib/: network-health.ts
api/notifications/: subscribe.ts  subscriptions.ts  unsubscribe.ts
contracts/: Cargo.toml  MUTATION_TESTING.md  deny.toml  deploy.sh  registry.json
contracts/lp-locker/: .cargo-mutants.toml  Cargo.toml
contracts/lp-locker/src/: lib.rs  tests.rs
contracts/token-locker/: .cargo-mutants.toml  Cargo.toml
contracts/token-locker/src/: lib.rs  prop_tests.rs  tests.rs
docs/: changes.md  notification-service.md  security-audit.md  storage-optimization-148.md
docs/adr/: ADR-001-soroban-smart-contracts.md  (+7 more)
e2e/: create-lock.spec.ts  explorer.spec.ts  lock-detail.spec.ts  my-locks.spec.ts  navigation.spec.ts  theme-visual.spec.ts  visual.spec.ts
indexer/: db.ts  index.test.ts  index.ts  notifier.ts
public/: manifest.json  sw.js  verified-tokens.json
src/: App.tsx  index.css  main.tsx
src/hooks/: useLocks.ts  (+13 more)
(+132 files in other folders)
